--- a/abdurrahman/index.html
+++ b/abdurrahman/index.html
@@ -19,7 +19,7 @@
   </div>
         <ul id="menu" class="black" style=" margin-top:20px">
     		<li class="active"><a href="index.html">Anasayfa</a></li>    		
-			<li><a href="paylas-takipet.html">Paylas / Takip Et</a></li>
+			<li><a href="paylas-takipet.html">aa</a></li>
             <li><a href="hakkımızda.html">Hakkımızda</a></li>              
  		</ul>
    <div id="slider">
